--- a/optionSimul.html
+++ b/optionSimul.html
@@ -30,281 +30,189 @@
   .results { margin-top:14px; padding:12px; background:rgba(255,255,255,0.03); border-radius:8px; }
   .results p { margin:6px 0; }
 
-  /* ===== 원하는 옵션 세로로 배열 ===== */
-  #desiredContainer {
-    display:flex;
-    flex-direction:column;
-    gap:6px;
-    margin-bottom:12px;
-  }
-
-  #desiredContainer select {
-    padding:8px;
-    border-radius:6px;
-    background:#0b1220;
-    color:#e6f0ff;
-    border:1px solid rgba(255,255,255,0.06);
-  }
-
+  #desiredContainer select { display:block; width:200px; margin-bottom:8px; }
 </style>
 </head>
 <body>
-  <div class="container">
-    <h1>바이탈 브레스 디지바이스 V — 옵션 잠금 & 기대값 계산기</h1>
+<div class="container">
+  <h1>바이탈 브레스 디지바이스 V — 옵션 잠금 & 기대값 계산기</h1>
 
-    <div class="top-images">
-      <img class="example" src="/mnt/data/BFC476BF-6152-4F44-BB29-065C8BCBC8B8.png" alt="example1">
-      <img class="example" src="/mnt/data/7B7DE10B-0F4E-490C-8498-59CFD9DFCE84.png" alt="example2">
-    </div>
+  <div class="top-images">
+    <img class="example" src="/mnt/data/BFC476BF-6152-4F44-BB29-065C8BCBC8B8.png" alt="example1">
+    <img class="example" src="/mnt/data/7B7DE10B-0F4E-490C-8498-59CFD9DFCE84.png" alt="example2">
+  </div>
 
-    <div class="row">
-      <div class="col">
-        <button class="primary" onclick="rerollUnlocked()">옵션(비잠금) 리롤</button>
-        <button class="secondary" onclick="resetAll()">모두 초기화</button>
-      </div>
-    </div>
-
-    <table>
-      <thead>
-        <tr><th>슬롯</th><th>현재 옵션 (고정=잠금)</th><th>잠금 토글</th></tr>
-      </thead>
-      <tbody id="slotsTbody"></tbody>
-    </table>
-
-    <hr style="margin:14px 0; border-color:rgba(255,255,255,0.04)">
-
-    <h3>원하는 옵션 (슬롯별)</h3>
-    <div id="desiredContainer"></div>
-
-    <div class="controls">
-      <button class="primary" onclick="computeExpectation()">기대 옵션 변경 스톤 계산</button>
-      <button class="secondary" onclick="fillDesiredWithCurrent()">원하는 옵션에 현재 슬롯값 복사</button>
-    </div>
-
-    <div class="results" id="resultBox">
-      <p>설명: 슬롯을 잠그면 그 슬롯은 리롤 시 절대 바뀌지 않습니다. 원하는 옵션 5개를 슬롯별로 입력한 뒤 계산하세요.</p>
-    </div>
-
-    <div class="note">
-      * 각 옵션 항목별 최대 등장 허용 수가 있습니다 (예: 공격력 최대 2개 등).<br>
-      * 잠금 수에 따라 1회 스톤 소모: 0잠금=1, 1잠금=3, 2잠금=5.
+  <div class="row">
+    <div class="col">
+      <button class="primary" onclick="rerollUnlocked()">옵션(비잠금) 리롤</button>
+      <button class="secondary" onclick="resetAll()">모두 초기화</button>
     </div>
   </div>
 
+  <table>
+    <thead>
+      <tr><th>슬롯</th><th>현재 옵션 (고정=잠금)</th><th>잠금 토글</th></tr>
+    </thead>
+    <tbody id="slotsTbody"></tbody>
+  </table>
+
+  <hr style="margin:14px 0; border-color:rgba(255,255,255,0.04)">
+
+  <h3>원하는 옵션 (순서 상관 없음)</h3>
+  <div id="desiredContainer"></div>
+
+  <div class="controls">
+    <button class="primary" onclick="computeExpectation()">기대 옵션 변경 스톤 계산</button>
+    <button class="secondary" onclick="fillDesiredWithCurrent()">현재 슬롯값 복사</button>
+  </div>
+
+  <div class="results" id="resultBox">
+    <p>설명: 슬롯을 잠그면 리롤 시 변경되지 않습니다. 원하는 옵션 5개를 입력한 뒤 계산하세요.</p>
+  </div>
+
+  <div class="note">
+    * 각 옵션 항목별 최대 등장 허용 수가 있습니다.<br>
+    * 잠금 수에 따라 1회 스톤 소모: 0잠금=1, 1잠금=3, 2잠금=5.
+  </div>
+</div>
+
 <script>
 const OPTION_LIMITS = {
-  "공격력": 2, "방어력": 2, "최대체력": 2, "디지소울": 2,
-  "스킬피해": 2, "크리티컬": 2, "치명피해": 2, "회피": 2, "적중도": 2,
-  "방어력%": 1, "최대 DS 증가%": 1, "최대 HP 증가%": 1,
-  "스킬 데미지 증가%": 1, "최종 데미지 증가%": 1
+  "공격력":2, "방어력":2, "최대체력":2, "디지소울":2,
+  "스킬피해":2, "크리티컬":2, "치명피해":2, "회피":2, "적중도":2,
+  "방어력%":1, "최대 DS 증가%":1, "최대 HP 증가%":1,
+  "스킬 데미지 증가%":1, "최종 데미지 증가%":1
 };
 const OPTION_NAMES = Object.keys(OPTION_LIMITS);
 
 let slots = [
-  {value: "", locked:false},
-  {value: "", locked:false},
-  {value: "", locked:false},
-  {value: "", locked:false},
-  {value: "", locked:false}
+  {value:"", locked:false},{value:"", locked:false},{value:"", locked:false},{value:"", locked:false},{value:"", locked:false}
 ];
 
-function stonePerTry(lockCount) {
-  if (lockCount === 0) return 1;
-  if (lockCount === 1) return 3;
-  return 5;
-}
+function stonePerTry(lockCount){ return lockCount===0?1:(lockCount===1?3:5); }
 
-function buildPool(excludeUsed=[]) {
-  const pool = [];
-  const used = {};
-  excludeUsed.forEach(v => { if (v) used[v] = (used[v]||0) + 1; });
-  for (const name of OPTION_NAMES) {
-    const allowed = OPTION_LIMITS[name];
-    const usedCount = used[name] || 0;
-    const remaining = Math.max(allowed - usedCount, 0);
-    for (let i=0;i<remaining;i++) pool.push(name);
-  }
+function buildPool(excludeUsed=[]){
+  const pool=[]; const used={};
+  excludeUsed.forEach(v=>{ if(v) used[v]=(used[v]||0)+1; });
+  OPTION_NAMES.forEach(name=>{
+    const allowed = OPTION_LIMITS[name]; 
+    const remaining = Math.max(allowed-(used[name]||0),0);
+    for(let i=0;i<remaining;i++) pool.push(name);
+  });
   return pool;
 }
 
-function shuffle(arr) {
-  for (let i = arr.length-1; i>0; i--) {
-    const j = Math.floor(Math.random()*(i+1));
-    [arr[i], arr[j]] = [arr[j], arr[i]];
-  }
-  return arr;
-}
+function shuffle(arr){ for(let i=arr.length-1;i>0;i--){ const j=Math.floor(Math.random()*(i+1)); [arr[i],arr[j]]=[arr[j],arr[i]];} return arr; }
 
-function fillInitial() {
+function fillInitial(){
   const pool = shuffle(buildPool([]));
-  for (let i=0;i<5;i++){
-    slots[i].value = pool.length ? pool.shift() : "";
-    slots[i].locked = false;
-  }
+  for(let i=0;i<5;i++){ slots[i].value = pool.length?pool.shift():""; slots[i].locked=false; }
   renderSlots();
 }
 
 function renderSlots(){
   const tbody = document.getElementById("slotsTbody");
-  tbody.innerHTML = "";
-  for (let i=0;i<5;i++){
-    const tr = document.createElement("tr");
-    const tdIndex = document.createElement("td"); tdIndex.innerText = `${i+1}번`;
-    const tdValue = document.createElement("td"); 
+  tbody.innerHTML="";
+  for(let i=0;i<5;i++){
+    const tr=document.createElement("tr");
+    const tdIndex=document.createElement("td"); tdIndex.innerText=`${i+1}번`;
+    const tdValue=document.createElement("td"); 
     tdValue.innerText = slots[i].value || "-";
-    if (slots[i].locked) {
-      tdValue.style.fontWeight = "700";
-      tdValue.style.color = "#ffd7d7";
-    } else {
-      tdValue.style.fontWeight = "400";
-      tdValue.style.color = "";
-    }
+    tdValue.style.fontWeight = slots[i].locked?"700":"400";
+    tdValue.style.color = slots[i].locked?"#ffd7d7":"";
 
-    const tdLock = document.createElement("td");
-    const btn = document.createElement("button");
-    btn.className = "lock-btn";
-    btn.innerText = slots[i].locked ? "잠금 해제" : "잠금";
-    if (slots[i].locked) btn.classList.add("locked");
-    btn.onclick = () => {
-      const currentLockCount = slots.filter(s=>s.locked).length;
-      if (!slots[i].locked && currentLockCount >= 2) {
-        alert("최대 2개까지만 잠글 수 있습니다.");
-        return;
-      }
-      slots[i].locked = !slots[i].locked;
-      renderSlots();
+    const tdLock=document.createElement("td");
+    const btn=document.createElement("button");
+    btn.className="lock-btn"; btn.innerText=slots[i].locked?"잠금 해제":"잠금";
+    if(slots[i].locked) btn.classList.add("locked");
+    btn.onclick = ()=>{
+      const lockCount = slots.filter(s=>s.locked).length;
+      if(!slots[i].locked && lockCount>=2){ alert("최대 2개까지만 잠글 수 있습니다."); return; }
+      slots[i].locked = !slots[i].locked; renderSlots();
     };
     tdLock.appendChild(btn);
-
-    tr.appendChild(tdIndex);
-    tr.appendChild(tdValue);
-    tr.appendChild(tdLock);
+    tr.appendChild(tdIndex); tr.appendChild(tdValue); tr.appendChild(tdLock);
     tbody.appendChild(tr);
   }
 }
 
-function rerollUnlocked() {
+// 슬롯 리롤 (잠금 적용)
+function rerollUnlocked(){
   const lockedValues = slots.filter(s=>s.locked).map(s=>s.value).filter(Boolean);
   let pool = shuffle(buildPool(lockedValues));
-  for (let i=0;i<5;i++){
-    if (slots[i].locked) continue;
-    slots[i].value = pool.length ? pool.shift() : "";
-  }
+  for(let i=0;i<5;i++){ if(slots[i].locked) continue; slots[i].value = pool.length?pool.shift():""; }
   renderSlots();
 }
 
-function resetAll() {
-  for (let i=0;i<5;i++){ slots[i].value = ""; slots[i].locked=false; }
-  fillInitial();
-}
+function resetAll(){ for(let i=0;i<5;i++){ slots[i].value=""; slots[i].locked=false; } fillInitial(); }
 
-/* ===== 원하는 옵션 UI ===== */
-function renderDesiredUI() {
-  const cont = document.getElementById("desiredContainer");
-  cont.innerHTML = "";
-  for (let i=0;i<5;i++){
-    const sel = document.createElement("select");
-    sel.dataset.slot = i;
-    const empty = document.createElement("option"); empty.value=""; empty.innerText=`원하는 옵션 ${i+1}`; sel.appendChild(empty);
-    OPTION_NAMES.forEach(name=>{
-      const o = document.createElement("option"); o.value=name; o.innerText=name; sel.appendChild(o);
-    });
+function renderDesiredUI(){
+  const cont=document.getElementById("desiredContainer"); cont.innerHTML="";
+  for(let i=0;i<5;i++){
+    const sel=document.createElement("select");
+    sel.dataset.slot=i; sel.style.padding="8px"; sel.style.borderRadius="6px";
+    sel.style.background="#0b1220"; sel.style.color="#e6f0ff"; sel.style.border="1px solid rgba(255,255,255,0.06)";
+    const empty=document.createElement("option"); empty.value=""; empty.innerText=`원하는 옵션 ${i+1}`; sel.appendChild(empty);
+    OPTION_NAMES.forEach(name=>{ const o=document.createElement("option"); o.value=name; o.innerText=name; sel.appendChild(o); });
     cont.appendChild(sel);
   }
 }
 
-function fillDesiredWithCurrent() {
+function fillDesiredWithCurrent(){
   const selects = document.querySelectorAll("#desiredContainer select");
-  selects.forEach((s, i)=> s.value = slots[i].value || "");
+  selects.forEach((s,i)=> s.value = slots[i].value||"");
 }
 
-/* 단일 시도 성공확률 계산 */
-function computeSingleTrialProb(desiredArr) {
-  for (let i=0;i<5;i++){
-    if (slots[i].locked) {
-      if (desiredArr[i] && slots[i].value !== desiredArr[i]) {
-        return 0;
-      }
-    }
-  }
-  const lockedValues = slots.filter(s=>s.locked).map(s=>s.value).filter(Boolean);
-  const pool = buildPool(lockedValues);
-  const counts = {};
-  pool.forEach(x => counts[x] = (counts[x] || 0) + 1);
-  let N = pool.length;
-
-  let p = 1;
-  for (let i=0;i<5;i++){
-    if (slots[i].locked) continue;
-    const desired = desiredArr[i];
-    if (!desired) return NaN;
-    const avail = counts[desired] || 0;
-    if (avail <= 0) return 0;
-    p *= avail / N;
-    counts[desired] = avail - 1;
-    N -= 1;
-  }
-  return p;
-}
-
-/* 기대값 계산 */
-function computeExpectation() {
+// 순서 상관 없는 기대값 계산 (슬롯 상태와 무관)
+function computeExpectation(){
   const selects = document.querySelectorAll("#desiredContainer select");
-  const desired = Array.from(selects).map(s => s.value);
+  const desired = Array.from(selects).map(s=>s.value);
+  if(desired.some(v=>v==="")){ alert("원하는 옵션 5개를 모두 선택해주세요."); return; }
 
-  if (desired.some(v => v === "")) {
-    alert("원하는 옵션 5개를 모두 선택해주세요 (비어있는 항목이 있습니다).");
-    return;
+  // 풀 구성
+  const pool = [];
+  for(const name of OPTION_NAMES){
+    for(let i=0;i<OPTION_LIMITS[name];i++) pool.push(name);
   }
 
-  const lockCount = slots.filter(s=>s.locked).length;
-  const p = computeSingleTrialProb(desired);
-  if (isNaN(p)) {
-    alert("원하는 옵션을 비워두지 마세요.");
-    return;
+  // 옵션별 카운트
+  const counts={};
+  pool.forEach(v=> counts[v]=(counts[v]||0)+1);
+
+  // 원하는 옵션 확률 계산 (순서 무관)
+  let numerator=1;
+  const tempCounts={...counts};
+  for(const opt of desired){
+    if(!tempCounts[opt] || tempCounts[opt]<=0){ numerator=0; break; }
+    numerator *= tempCounts[opt];
+    tempCounts[opt]--;
   }
+  const remainingSlots = 5;
+  let denominator=1;
+  for(let i=0;i<remainingSlots;i++){ denominator*=remainingSlots-i; }
 
-  const perTryStone = stonePerTry(lockCount);
-  const resultBox = document.getElementById("resultBox");
+  const p = numerator/denominator;
+  const expectedTrials = 1/p;
+  const expectedStones = expectedTrials * 1; // 잠금 수 무관, 기대값 계산은 별개
 
-  if (p === 0) {
-    resultBox.innerHTML = `<p><strong>결과:</strong> 현재 잠금 상태에서는 원하는 조건을 만족하는 것이 불가능합니다 (잠금된 슬롯과 원하는 옵션 불일치).</p>`;
-    return;
-  }
+  function fmtPct(x){ return (x*100).toFixed(6)+"%"; }
+  function fmtNum(x){ return x>=1e6?Math.round(x).toLocaleString():Number(x.toFixed(2)).toLocaleString(); }
 
-  const expectedTrials = 1 / p;
-  const expectedStones = expectedTrials * perTryStone;
-
-  function fmtPct(x) { return (x*100).toFixed(6) + "%"; }
-  function fmtNum(x) { 
-    if (!isFinite(x)) return "무한"; 
-    if (x >= 1e6) return Math.round(x).toLocaleString();
-    return Number(x.toFixed(2)).toLocaleString();
-  }
-
-  resultBox.innerHTML = `
-    <p><strong>잠금 수:</strong> ${lockCount}개</p>
+  document.getElementById("resultBox").innerHTML=`
     <p><strong>단일 시도 성공 확률:</strong> ${fmtPct(p)}</p>
-    <p><strong>기대 시도 횟수 (평균):</strong> ${fmtNum(expectedTrials)}</p>
-    <p><strong>1회 스톤 소모량:</strong> ${perTryStone}개</p>
-    <p><strong>기대 옵션 변경 스톤 (평균):</strong> ${fmtNum(expectedStones)}개</p>
+    <p><strong>기대 시도 횟수:</strong> ${fmtNum(expectedTrials)}</p>
+    <p><strong>기대 옵션 변경 스톤:</strong> ${fmtNum(expectedStones)}개</p>
     <hr>
-    <p style="color:#cfe3ff"><em>참고:</em> 이 계산은 '한 번의 리롤 시 모든 (비잠금 포함) 슬롯이 정확히 사용자가 지정한 슬롯별 옵션과 일치'할 확률을 구한 것입니다.</p>
+    <p style="color:#cfe3ff"><em>참고:</em> 순서 상관없이 원하는 옵션 5개가 모두 나오면 성공으로 계산합니다. 슬롯 잠금과 별개 계산입니다.</p>
   `;
 }
 
-/* 초기화 */
-function init() {
-  renderDesiredUI();
-  fillInitial();
-}
+window.rerollUnlocked=rerollUnlocked;
+window.resetAll=resetAll;
+window.fillDesiredWithCurrent=fillDesiredWithCurrent;
+window.computeExpectation=computeExpectation;
 
-/* expose */
-window.rerollUnlocked = rerollUnlocked;
-window.resetAll = resetAll;
-window.fillDesiredWithCurrent = fillDesiredWithCurrent;
-window.computeExpectation = computeExpectation;
-
+function init(){ fillInitial(); renderDesiredUI(); }
 init();
 </script>
 </body>
